FreeST/test/Programs/InvalidTests/SessionTypes/invalidExtractPair/invalidExtractPair.fst
extractPair : Bool
extractPair = True

-- invalid extract pair: Expecting a pair type; found Bool
fun : Bool
fun =
  let (x, y) = extractPair in
  x

